# python-project-lvl1

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
brain_games/: __init__.py  engine.py  printer.py  random_wrapper.py  shared_logic.py
brain_games/engine/: common_functions.py  main.py  main_logic.py
brain_games/engine/games/: __init__.py  brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain-even.py  brain_calc.py  brain_calc.py___jb_tmp___  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py  common_functions.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
