[tool.poetry]
name = "SergSm_brain_games"
version = "0.1.8"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    {include = "brain_games"},
]


[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.games.brain_even:play_parity_check_game"
brain-calc = "brain_games.scripts.games.brain_calc:play_calc_game"
brain-gcd = "brain_games.scripts.games.brain-gcd:play_gcd"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


